# techno_c_IZ

./: .gitignore  CMakeLists.txt  README.md  config.sh  functions.c  functions.h  main.c  rome.c  script.sh  tests.cpp
.github/workflows/: LearningCI.yml  SuperCI.yml
lib/consistently/: counting_consistently.c  counting_consistently.h
lib/file/: file.c  file.h
lib/parallel/: counting_parallel.c  counting_parallel.h
roman/: .gitignore  CMakeLists.txt  functions.h  tests.cpp
tests/: CMakeLists.txt  tests.cpp
